--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
 
-<p><font size="10" color="#ff7f50" face="ＭＳ Ｐ明朝,ＭＳ 明朝">T tools</font></p>
+<p><font size="10" color="#ff7f50" face="ＭＳ Ｐ明朝,ＭＳ 明朝">TOMA Earth</font></p>
 <p><font size="6" color="#ffff00" face="ＭＳ Ｐ明朝,ＭＳ 明朝"></p>
 
   <meta charset="utf-8" />
