--- a/menu.htm
+++ b/menu.htm
@@ -65,7 +65,7 @@
     <td width="15">　</td>
     <td width="10"><font color="#0000FF">●</font></td>
     <td width="148"> 
-      <p><a href="toi/toi.htm" target="right">お問い合わせ</a></p>
+      <p><a href="pages/page4.html" target="right"></a></p>
     </td>
   </tr>
   <tr> 
@@ -77,7 +77,7 @@
     <td width="15">　</td>
     <td width="10"><font color="#333399">●</font></td>
     <td width="148"> 
-      <p><a href="yt/yt.htm" target="right">所属Youtuber</a></p>
+      <p><a href="pages/page5.html" target="right"></a></p>
     </td>
   </tr>
   <tr> 
@@ -89,7 +89,7 @@
     <td width="15">　</td>
     <td width="10"><font color="#CC00CC">●</font></td>
     <td width="148"> 
-      <p><a href="kanri/kanri.htm" target="right">管理者</a></p>
+      <p><a href="pages/page6.html" target="right">管理者</a></p>
     </td>
   </tr>
   <tr> 
