--- a/top.htm
+++ b/top.htm
@@ -9,7 +9,7 @@
 
 <p><font size="10" color="#ff7f50" face="ＭＳ Ｐ明朝,ＭＳ 明朝">TOMA Earth</font></p>
 <p><font size="6" color="#ffff00" face="ＭＳ Ｐ明朝,ＭＳ 明朝"></p>
-
+<p><br><br><br>地球を再現したマップで<br>今、歴史が始まる...</p>
   <meta charset="utf-8" />
   <title>TOMA Earth</title>
     <style class="container" align="center">
