--- a/pages/page6.html
+++ b/pages/page6.html
@@ -1,1 +1,21 @@
+<html lang="ja" align="center">
+<body>
+    
+<head>
+<body class="badge bg-dark" text="#cccccc">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" align="center">
 
+
+
+<p><font size="10" color="#ff7f50" face="ＭＳ Ｐ明朝,ＭＳ 明朝">TOMA Earth</font></p>
+<p><font size="6" color="#ffff00" face="ＭＳ Ｐ明朝,ＭＳ 明朝"></p>
+<p><br><br><br>地球を再現したマップで<br>今、歴史が始まる...</p>
+<p><font size="3" color="#ffffff" face="ＭＳ Ｐ明朝,ＭＳ 明朝"></p>
+<p><br><br>1:18000の縮尺で再現された<br>1000×2000程度の世界で人類の歴史は始まった...</p>
+  <meta charset="utf-8" />
+  <title>TOMA Earth</title>
+    <style class="container" align="center">
+  </style>
+</head>    
+</body>
+</html>
