--- a/pages/page6.html
+++ b/pages/page6.html
@@ -7,12 +7,51 @@
 
 
 
-<p><font size="10" color="#ff7f50" face="ＭＳ Ｐ明朝,ＭＳ 明朝">TOMA Earth</font></p>
+<p><font size="10" color="#ff7f50" face="ＭＳ Ｐ明朝,ＭＳ 明朝">管理者</font></p>
 <p><font size="6" color="#ffff00" face="ＭＳ Ｐ明朝,ＭＳ 明朝"></p>
-<p><br><br><br>地球を再現したマップで<br>今、歴史が始まる...</p>
+<p><br><br><br></p>
 <p><font size="3" color="#ffffff" face="ＭＳ Ｐ明朝,ＭＳ 明朝"></p>
-<p><br><br>1:18000の縮尺で再現された<br>1000×2000程度の世界で人類の歴史は始まった...</p>
-  <meta charset="utf-8" />
+
+    <div class="accordion" id="accordionExample">
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingOne">
+      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+        トマト
+      </button>
+    </h2>
+    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>ワールドの主でTOMA Earthはトマトのゲーム機上で運営される</strong>オーストラリア帝国の支配者
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingTwo">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+        かろん
+      </button>
+    </h2>
+    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>ワールドのルール考案者</strong>ntrol the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      </div>
+    </div>
+  </div>
+  <div class="accordion-item">
+    <h2 class="accordion-header" id="headingThree">
+      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+        Accordion Item #3
+      </button>
+    </h2>
+    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+      <div class="accordion-body">
+        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+      </div>
+    </div>
+  </div>
+</div>
+    
+    <meta charset="utf-8" />
   <title>TOMA Earth</title>
     <style class="container" align="center">
   </style>
