--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="jerky,じゃーきー,r18" />
     <meta name="author" content="jerky" />
     <meta http-equiv="content-language" content="ja" /> 
-<title>KaronNetWork</title>
+<title>TOMA Earth</title>
 </head>
 <frameset cols=18,82>
   <frame src="menu.htm" marginheight="0" marginwidth="0" scrolling="auto" name="left">
