--- a/pages/page6.html
+++ b/pages/page6.html
@@ -10,46 +10,18 @@
 <p><font size="10" color="#ff7f50" face="ＭＳ Ｐ明朝,ＭＳ 明朝">管理者</font></p>
 <p><font size="6" color="#ffff00" face="ＭＳ Ｐ明朝,ＭＳ 明朝"></p>
 <p><br><br><br></p>
-<p><font size="3" color="#ffffff" face="ＭＳ Ｐ明朝,ＭＳ 明朝"></p>
-
-    <div class="accordion" id="accordionExample">
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="headingOne">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-        トマト
-      </button>
-    </h2>
-    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-        <strong>ワールドの主でTOMA Earthはトマトのゲーム機上で運営される</strong>オーストラリア帝国の支配者
-      </div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="headingTwo">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-        かろん
-      </button>
-    </h2>
-    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-        <strong>ワールドのルール考案者</strong>KNW代表
-      </div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="headingThree">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-        Jerky
-      </button>
-    </h2>
-    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-          <strong>にk(((殴...か,神絵師ぃ</strong>すべてのものはjerkyに如かず
-      </div>
-    </div>
-  </div>
-</div>
+<p><font size="6" color="#ffffff" face="ＭＳ Ｐ明朝,ＭＳ 明朝"></p>
+<p>トマト</p>
+    <p><font size="4" color="#ffffff" face="ＭＳ Ｐ明朝,ＭＳ 明朝"></p>
+<p>ワールドの主でTOMA Earthはトマトのゲーム機上で運営される。<br>オーストラリア帝国の支配者</p>
+<p><font size="6" color="#ffffff" face="ＭＳ Ｐ明朝,ＭＳ 明朝"></p>
+<p>かろん</p>
+<p><font size="4" color="#ffffff" face="ＭＳ Ｐ明朝,ＭＳ 明朝"></p>
+<p>ワールドのルール考案者。KaronNetWork代表<br>彼はあまり来ないため国を持っていない。<br>ゲーム内ではサハラ砂漠に住んでいる。</p>
+<p><font size="6" color="#ffffff" face="ＭＳ Ｐ明朝,ＭＳ 明朝"></p>
+<p>Jerky</p>
+<p><font size="4" color="#ffffff" face="ＭＳ Ｐ明朝,ＭＳ 明朝"></p>
+<p>にk(((殴...か,神絵師ぃ<br>すべてのものはjerkyに如かず<br>彼も,かろんと同様にあまり来ないため国を持っていない<br>しかし彼が国を持てば世界は彼のものになるだろう...</p>
     
     <meta charset="utf-8" />
   <title>TOMA Earth</title>
