--- a/pages/page6.html
+++ b/pages/page6.html
@@ -22,7 +22,11 @@
 <p>Jerky</p>
 <p><font size="4" color="#ffffff" face="ＭＳ Ｐ明朝,ＭＳ 明朝"></p>
 <p>にk(((殴...か,神絵師ぃ<br>すべてのものはjerkyに如かず<br>彼も,かろんと同様にあまり来ないため国を持っていない<br>しかし彼が国を持てば世界は彼のものになるだろう...</p>
-    
+<p><font size="6" color="#ffffff" face="ＭＳ Ｐ明朝,ＭＳ 明朝"></p>
+<p>のやっち</p>
+<p><font size="4" color="#ffffff" face="ＭＳ Ｐ明朝,ＭＳ 明朝"></p>
+<p>TOMA Earth自体を司る神<br>管理者の中でも上位<br>彼も、あまり来ないため国は持っていない<br>のやっち神を崇拝する、のやっち教というものがある</p>
+        
     <meta charset="utf-8" />
   <title>TOMA Earth</title>
     <style class="container" align="center">
